<resources>
    <string name="app_name">deafen_prototype</string>
    <string name="deafen">Deafen</string>
    <string name="mute">Mute</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="setting">TODO</string>
    <string name="pause">Pause</string>
    <string name="settings">Settings</string>
    <string name="action">Action</string>
    <string name="Deafen">Deafen</string>
    <string name="deafen_volume">Deafen Volume</string>
    <string name="time">Time</string>
    <string name="trigger">Trigger</string>
</resources>