<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/BackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow" />

    <Switch
        android:id="@+id/action_switch"
        android:layout_width="115dp"
        android:layout_height="52dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="28dp"
        android:text="@string/pause"
        android:checked="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <SeekBar
        android:id="@+id/Deafen_volume"
        android:layout_width="335dp"
        android:layout_height="25dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="40dp"
        android:max="15"
        android:progress="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="335dp"
        android:layout_height="25dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:max="10"
        android:progress="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time" />



    <TextView
        android:id="@+id/Title"
        android:layout_width="102dp"
        android:layout_height="33dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="152dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deafentext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="52dp"
        android:gravity="center"
        android:text="@string/Deafen"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/action"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackButton" />

    <TextView
        android:id="@+id/Scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/deafen_volume"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actiontext" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/time"

        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Deafen_volume" />


</androidx.constraintlayout.widget.ConstraintLayout>